- xhtml list population call moved from the property editor to the include component and the component will continue listening to the change/deletion event to the list so it can update itself without the presence of the property editor - New interface IInitializeAfterAddedComponent added to know when the component added to the editor so it can start more exclusive processes like adding events etc. after component being added - File deletion bugs now resolved (reference prominic/Moonshine-IDE#301)

--- a/src/view/EditingSurface.mxml
+++ b/src/view/EditingSurface.mxml
@@ -47,6 +47,7 @@
 		import utils.EditingSurfaceWriter;
 		
 		import view.interfaces.IHistorySurfaceComponent;
+		import view.interfaces.IInitializeAfterAddedComponent;
 		import view.interfaces.IMainApplication;
 		import view.interfaces.IMultiViewContainer;
 		import view.interfaces.INonDeletableSurfaceComponent;
@@ -530,6 +531,10 @@
 			if (object.parent !== dropTarget)
 			{
 				dropTarget.addElement(IVisualElement(object));
+				
+				// some component may have processing should occur after
+				// being added to the editor
+				if (object is IInitializeAfterAddedComponent) (object as IInitializeAfterAddedComponent).componentAddedToEditor();
 				
 				// at this point property editor not created thus we send the 
 				// event through EditingSurface
