--- a/src/view/primeFaces/forms/TextInputNumberForm.mxml
+++ b/src/view/primeFaces/forms/TextInputNumberForm.mxml
@@ -32,6 +32,10 @@
         private function onDecimalSeparatorChanged(event:Event):void
         {
             this.refreshRestrict();
+            if (textProperty == "decimalSeparator")
+            {
+                this.textInput.text = InputNumber.DEFAULT_DECIMAL_SEPARATOR;
+            }
         }
 
         private function refreshRestrict():void
