--- a/src/view/primeFaces/propertyEditors/InputNumberPropertyEditor.mxml
+++ b/src/view/primeFaces/propertyEditors/InputNumberPropertyEditor.mxml
@@ -11,6 +11,7 @@
     <s:FormHeading label="Data" skinClass="skins.FormHeadingSkin" />
     <primeFaces:TextInputNumberForm label="Value" textProperty="text"/>
     <forms:ToggleButtonSelectedForm label="Required" textProperty="required"/>
-    <primeFaces:TextInputNumberForm label="Decimal separator char" textProperty="decimalSeparator" maxChar="1"/>
+    <primeFaces:DecimalSeparatorTextForm label="Decimal separator char"
+                                         textProperty="decimalSeparator" maxChar="1"/>
     <forms:TextForm label="Thousand separator char" textProperty="thousandSeparator" maxChar="1"/>
 </suportclasses:BasePropertyEditor>
