Include: Exclude from file list currently opened file (reference prominic/Moonshine-IDE#314)

--- a/src/view/VisualEditor.mxml
+++ b/src/view/VisualEditor.mxml
@@ -63,6 +63,7 @@
 
 			public function loadFile(filePath:String):void
 			{
+				MoonshineBridgeUtils.currentFilePath = filePath;
 				_fileMoonshine = createNewFileIfNotExists(filePath);
 				_fileStreamMoonshine = new FileStream();
 				_fileStreamMoonshine.open(_fileMoonshine, FileMode.READ);
