--- a/src/view/forms/DateForm.mxml
+++ b/src/view/forms/DateForm.mxml
@@ -3,7 +3,8 @@
         xmlns:fx="http://ns.adobe.com/mxml/2009"
         xmlns:mx="library://ns.adobe.com/flex/mx"
         xmlns:s="library://ns.adobe.com/flex/spark"
-        xmlns:suportclasses="view.suportClasses.*" skinClass="skins.FormSkin">
+        xmlns:suportclasses="view.suportClasses.*" skinClass="skins.FormSkin"
+        creationComplete="onDateFormCreationComplete(event)">
 
     <suportclasses:layout>
         <s:FormLayout />
@@ -17,6 +18,7 @@
     <fx:Script><![CDATA[
         import mx.binding.utils.BindingUtils;
         import mx.binding.utils.ChangeWatcher;
+        import mx.events.FlexEvent;
 
         import view.interfaces.ISurfaceComponent;
 
@@ -50,6 +52,12 @@
                 return;
             }
             this._binding = BindingUtils.bindProperty(this, "bindableDate", this.selectedItem, FIELD_SELECTED_DATE, true);
+        }
+
+        private function onDateFormCreationComplete(event:FlexEvent):void
+        {
+            _childrenForFocus = [];
+            _childrenForFocus.push(dateField);
         }
         ]]></fx:Script>
 </suportclasses:BasePropertyEditorForm>
