--- a/src/view/primeFaces/forms/GridForm.mxml
+++ b/src/view/primeFaces/forms/GridForm.mxml
@@ -2,7 +2,7 @@
 <suportclasses:BasePropertyEditorForm
 		xmlns:fx="http://ns.adobe.com/mxml/2009"
 		xmlns:s="library://ns.adobe.com/flex/spark"
-		xmlns:suportclasses="view.suportClasses.*" xmlns:mx="library://ns.adobe.com/flex/mx"
+		xmlns:suportclasses="view.suportClasses.*"
 		skinClass="skins.FormSkin" creationComplete="onGridFormCreationComplete(event)">
 	<fx:Script>
 		<![CDATA[
