Grid: For some reason array which holding columns were out of sync with component - it is workaround for that scenario (reference prominic/Moonshine-IDE#266)

--- a/src/view/primeFaces/forms/GridForm.mxml
+++ b/src/view/primeFaces/forms/GridForm.mxml
@@ -132,7 +132,10 @@
 		private function deleteColumnButton_clickHandler(event:MouseEvent):void
 		{
 			var rowItem:GridListItem = dgRows.selectedItem as GridListItem;
-			rowItem.columns.removeItemAt(selectedGrid.selectedColumn);
+			if (rowItem.columns.length > selectedGrid.selectedColumn)
+			{
+				rowItem.columns.removeItemAt(selectedGrid.selectedColumn);
+			}
 
 			var grid:Grid = (selectedItem as Grid);
 			grid.removeColumn(selectedGrid.selectedRow, selectedGrid.selectedColumn);
