Expose duplicate function for Moonshine usage (reference prominic/Moonshine-IDE#248)

--- a/src/view/VisualEditor.mxml
+++ b/src/view/VisualEditor.mxml
@@ -97,6 +97,11 @@
 
 				return tempFileMoonshine;
 			}
+
+			public function duplicateSelectedElement():void
+			{
+				this.copyPasteManager.duplicate();
+			}
 		}
 
 		private function newButton_clickHandler(event:MouseEvent):void
