Fix issue where selectedItem wasn't properly updated yet, so we were getting NPE (reference prominic/Moonshine-IDE#248)

--- a/src/view/primeFaces/forms/DataTableForm.mxml
+++ b/src/view/primeFaces/forms/DataTableForm.mxml
@@ -131,6 +131,8 @@
 
 		private function onTableVarUpdated(value:Object):void
 		{
+			if (selectedItem === null) return;
+
 			tableVar = value.toString();
 			(selectedItem as DataTable).tableColumnDescriptor.refresh();
 		}
